--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,8 @@
 
 body {
   color: #FFFFFF;
-  background: #191D3E;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #11142C 0%, #1a114e 100%);
 }
 
 @layer utilities {
