--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,24 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 17px;
+  background: #1a114e;
+}
+
+*::-webkit-scrollbar-track {
+  background: #1a114e;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #11142C;
+  border-radius: 14px;
+  border: 3px solid #11142C;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #0A0D1D;
+}
