--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,24 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #0A0D1D;
 }
+
+/* Chrome, Edge, and Safari */
+.scroler::-webkit-scrollbar {
+  width: 17px;
+  background: rgba(0, 0, 0, 0);
+}
+
+.scroler::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+}
+
+.scroler::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 14px;
+  border: 3px solid rgba(0, 0, 0, 0);
+}
+
+.scroler::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0);
+}
