Add items in matche

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,3 +47,9 @@ body {
 .scroler::-webkit-scrollbar-thumb:hover {
   display: none;
 }
+
+.textRGBGradient {
+  background: linear-gradient(42deg, #a6caff 0%, #d3b8ff 50%, #b8a6ff 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
